# book-to-text

./: .gitignore  BookToText.ipynb  README.md  booktotext.ipynb  main.py  pyproject.toml
book-to-text/: converter.py  fs.py  logger.py  ocr.py  output.py  pipeline.py
