[project]
name = "booktotext"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.13",
    "click>=8.4.1",
    "numpy>=2.4.6",
    "pdf2image>=1.17.0",
    "pypdf>=6.12.1",
    "pyvips>=3.1.1",
    "pyyaml>=6.0.3",
]
